Fix application show page

--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,27 +1,1 @@
-<p>Applicant: <%= @application.name %><br>
-Address: <%= @application.street %>, <%= @application.city %>, <%= @application.state %> <%= @application.zipcode %><br>
-<%= @application.description %><br>
-Status: <%= @application.status %></p>
-<p>Pets:</p>
-<% @application.pets.each do |pet| %>
-  <%= link_to "#{pet.name}", "/pets/#{pet.id}" %><br>
-<% end %>
-
-<p>Add A Pet To This Application</p>
-
-<%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |f| %>
-  <%= f.text_field :pet_name, required: true %>
-  <%= f.submit 'Search Pet By Name' %>
-<% end %>
-
-<% if params[:pet_name] %>
-  <% @pets.each do |pet| %>
-    <p>Name: <%= pet.name %></p>
-    <%= image_tag "#{pet.image}" %><br>
-    <p>Sex: <%= pet.sex.capitalize %></p>
-    <p>Approximate Age: <%= pet.approximate_age %></p>
-    <p>Descrition: <%= pet.description %></p>
-    <p>Adoptable: <%= pet.adoptable.to_s.capitalize %></p>
-    <%= button_to  "Adopt This Pet", "/applications/#{@application.id}", method: :patch, params: {pet_id: pet.id} %>
-  <% end %>
-<% end %>
+<%= render :partial => @application.status %>
