--- a/app/views/application/_In Progress.html.erb
+++ b/app/views/application/_In Progress.html.erb
@@ -18,7 +18,7 @@ Status: <%= @application.status %></p>
 
 <p>Add A Pet To This Application</p>
 
-<%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |f| %>
+<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
   <%= f.text_field :pet_name, required: true %>
   <%= f.submit 'Search Pet By Name' %>
 <% end %>
