--- a/app/views/application/_In Progress.html.erb
+++ b/app/views/application/_In Progress.html.erb
@@ -31,6 +31,6 @@ Status: <%= @application.status %></p>
     <p>Approximate Age: <%= pet.approximate_age %></p>
     <p>Descrition: <%= pet.description %></p>
     <p>Adoptable: <%= pet.adoptable.to_s.capitalize %></p>
-    <%= button_to  "Adopt This Pet", "/applications/#{@application.id}", method: :patch, params: {pet_id: pet.id} %>
+    <%= button_to  "Adopt This Pet", "/applications/#{@application.id}", method: :post, params: {pet_id: pet.id} %>
   <% end %>
 <% end %>
