--- a/app/views/admin/applications/show.html.erb
+++ b/app/views/admin/applications/show.html.erb
@@ -10,6 +10,8 @@ Pets:<br>
     <p><%= link_to "#{pet_app.pet.name}", "/pets/#{pet_app.pet_id}" %> has been rejected!</p><br>
   <% elsif pet_app.approved == "true" %>
     <p><%= link_to "#{pet_app.pet.name}", "/pets/#{pet_app.pet_id}" %> has been approved!</p><br>
+  <% elsif pet_app.pet.adoptable == false %>
+    <p><%= link_to "#{pet_app.pet.name}", "/pets/#{pet_app.pet_id}" %> has already been approved for adoption!</p>
   <% else %>
     <%= link_to "#{pet_app.pet.name}", "/pets/#{pet_app.pet_id}" %>
     <%= button_to  "Approve This Pet", "/admin/applications/#{@application.id}", method: :patch, params: {approved: pet_app.pet_id}, local: true %>
