--- a/app/views/application/_In Progress.html.erb
+++ b/app/views/application/_In Progress.html.erb
@@ -25,12 +25,14 @@ Status: <%= @application.status %></p>
 
 <% if params[:pet_name] %>
   <% @pets.each do |pet| %>
-    <p>Name: <%= pet.name %></p>
-    <%= image_tag "#{pet.image}" %><br>
-    <p>Sex: <%= pet.sex.capitalize %></p>
-    <p>Approximate Age: <%= pet.approximate_age %></p>
-    <p>Descrition: <%= pet.description %></p>
-    <p>Adoptable: <%= pet.adoptable.to_s.capitalize %></p>
-    <%= button_to  "Adopt This Pet", "/applications/#{@application.id}", method: :post, params: {pet_id: pet.id} %>
+    <% if !pet.pet_applications.any? {|pet_app| pet_app.application_id == @application.id} %>
+      <p>Name: <%= pet.name %></p>
+      <%= image_tag "#{pet.image}" %><br>
+      <p>Sex: <%= pet.sex.capitalize %></p>
+      <p>Approximate Age: <%= pet.approximate_age %></p>
+      <p>Descrition: <%= pet.description %></p>
+      <p>Adoptable: <%= pet.adoptable.to_s.capitalize %></p>
+      <%= button_to  "Adopt This Pet", "/applications/#{@application.id}", method: :post, params: {pet_id: pet.id} %>
+    <% end %>
   <% end %>
 <% end %>
