Finish clean up before evaluation

--- a/app/views/admin/applications/index.html.erb
+++ b/app/views/admin/applications/index.html.erb
@@ -1,5 +1,5 @@
 <% @applications.each do |app| %>
-  <section style="border:5px solid black;margin:5px;">
+  <section class="app-<%= app.id %>" style="border:5px solid black;margin:5px;">
     <p>Applicant: <a href="/admin/applications/<%= app.id %>"><%= app.name %></a><br>
     Address: <%= app.street %>, <%= app.city %>, <%= app.state %> <%= app.zipcode %><br>
     Status: <%= app.status %><br>
