--- a/app/views/application/new.html.erb
+++ b/app/views/application/new.html.erb
@@ -1,13 +1,13 @@
 <%= form_with url: "/applications", method: :post, local: true do |f| %>
   <%= f.label          :name %>
-  <%= f.text_field     :name, required: true %><br>
+  <%= f.text_field     :name %><br>
   <%= f.label          :street %>
-  <%= f.text_field     :street, required: true %><br>
+  <%= f.text_field     :street %><br>
   <%= f.label          :city %>
-  <%= f.text_field     :city, required: true %><br>
+  <%= f.text_field     :city %><br>
   <%= f.label          :state %>
-  <%= f.text_field     :state, required: true %><br>
+  <%= f.text_field     :state %><br>
   <%= f.label          :zipcode %>
-  <%= f.text_field     :zipcode, required: true %><br>
+  <%= f.text_field     :zipcode %><br>
   <%= f.submit 'Submit Application' %>
 <% end %>
