--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,11 +5,11 @@
 <% @pets.each do |pet| %>
   <% if pet.adoptable == true %>
   <section id="pet-<%=pet.id%>">
-      <h2>name: <%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-      <%= image_tag "#{pet.image}" %><br>
-      approx age: <%= pet.approximate_age %><br>
-      sex: <%= pet.sex%><br>
-      shelter: <%= link_to "#{pet.shelter.name}", "shelters/#{pet.shelter.id}" %><br>
+      <h2>Name: <%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
+      <%= image_tag "#{pet.image}", class: "img-container" %><br>
+      <p>Approx Age: <%= pet.approximate_age %><br>
+      Sex: <%= pet.sex%><br>
+      Shelter: <%= link_to "#{pet.shelter.name}", "shelters/#{pet.shelter.id}" %></p><br>
       <a href="/pets/<%= pet.id %>/edit">Update Pet</a>
       <%= link_to "Delete Pet", "/pets/#{pet.id}", method: :delete %><br>
     </section>
